tests/baselines/reference/parserObjectCreation2.errors.txt
tests/cases/conformance/parser/ecmascript5/Expressions/parserObjectCreation2.ts(1,9): error TS2304: Cannot find name 'Foo'.


==== tests/cases/conformance/parser/ecmascript5/Expressions/parserObjectCreation2.ts (1 errors) ====
    new new Foo()()
            ~~~
!!! error TS2304: Cannot find name 'Foo'.